--- a/app/src/main/res/layout/activity_repair.xml
+++ b/app/src/main/res/layout/activity_repair.xml
@@ -3,12 +3,13 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:id="@+id/container"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".RepairActivity">
 
 	<com.google.android.material.bottomnavigation.BottomNavigationView
-		android:id="@+id/repair_nav"
+		android:id="@+id/nav_repair"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="0dp"
@@ -19,14 +20,15 @@
 		app:layout_constraintRight_toRightOf="parent"
 		app:menu="@menu/repair_nav_menu"/>
 
-	<fragment android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:id="@+id/repair_fragment"
+	<fragment android:id="@+id/nav_repair_fragment"
 			  android:name="androidx.navigation.fragment.NavHostFragment"
-			  app:layout_constraintBottom_toTopOf="@+id/repair_nav"
+			  android:layout_width="match_parent"
+			  android:layout_height="match_parent"
+			  app:defaultNavHost="true"
+			  app:layout_constraintBottom_toTopOf="@id/nav_repair"
 			  app:layout_constraintLeft_toLeftOf="parent"
 			  app:layout_constraintLeft_toRightOf="parent"
 			  app:layout_constraintTop_toTopOf="parent"
-			  app:navGraph="@navigation/mobile_navigation"/>
+			  app:navGraph="@navigation/repair_navigation"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
