--- a/app/src/main/res/layout/fragment_new_repair.xml
+++ b/app/src/main/res/layout/fragment_new_repair.xml
@@ -3,4 +3,11 @@
 			 xmlns:tools="http://schemas.android.com/tools"
 			 android:layout_width="match_parent"
 			 android:layout_height="match_parent"
-			 tools:context=".NewRepairFragment"/>
+			 tools:context=".NewRepairFragment">
+	
+	<Button
+			android:text="Button"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:id="@+id/button"/>
+</FrameLayout>
