basic card layout, scrollview doesn't work

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    
-    <TextView
-            android:id="@+id/text_home"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+<ScrollView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:fillViewport="true">
+
+	<GridLayout
+		xmlns:android="http://schemas.android.com/apk/res/android"
+		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
+		android:layout_width="match_parent"
+		android:orientation="vertical"
+		android:layout_height="match_parent"
+		android:id="@+id/home_cards"
+		android:columnCount="2"
+		android:rowCount="4"
+		android:alignmentMode="alignMargins"
+		android:weightSum="10"
+		tools:context=".MainActivity">
+
+		<!--1-->
+		<androidx.cardview.widget.CardView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_marginBottom="16dp"
+			android:layout_marginLeft="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginTop="16dp"
+			app:cardElevation="3dp"
+			app:cardCornerRadius="8dp"
+			android:backgroundTint="@color/button_yellow">
+
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/ic_local_dining_white_24dp"
+				android:padding="20dp"/>
+
+		</androidx.cardview.widget.CardView>
+
+		<androidx.cardview.widget.CardView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_marginBottom="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginLeft="16dp"
+			app:cardElevation="8dp"
+			android:backgroundTint="@color/button_green"
+			app:cardCornerRadius="8dp">
+
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/ic_place_white_24dp"
+				android:padding="20dp"/>
+
+		</androidx.cardview.widget.CardView>
+
+		<androidx.cardview.widget.CardView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_marginBottom="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginLeft="16dp"
+			app:cardElevation="8dp"
+			android:backgroundTint="@color/button_purple"
+			app:cardCornerRadius="8dp">
+
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/ic_build_white_24dp"
+				android:padding="20dp"/>
+
+
+		</androidx.cardview.widget.CardView>
+
+		<androidx.cardview.widget.CardView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_marginBottom="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginLeft="16dp"
+			app:cardElevation="8dp"
+			android:backgroundTint="@color/button_red"
+			app:cardCornerRadius="8dp">
+
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/ic_notifications_active_white_24dp"
+				android:padding="20dp"/>
+
+		</androidx.cardview.widget.CardView>
+
+		<androidx.cardview.widget.CardView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_marginBottom="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginLeft="16dp"
+			android:layout_marginTop="16dp"
+			app:cardElevation="8dp"
+			android:backgroundTint="@color/button_blue"
+			app:cardCornerRadius="8dp">
+
+			<ImageView
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:src="@drawable/ic_today_white_24dp"
+				android:padding="20dp"/>
+
+		</androidx.cardview.widget.CardView>
+
+		<androidx.cardview.widget.CardView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_marginBottom="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginLeft="16dp"
+			app:cardElevation="8dp"
+			android:backgroundTint="@color/button_rust"
+			app:cardCornerRadius="8dp">
+
+
+		</androidx.cardview.widget.CardView>
+
+		<androidx.cardview.widget.CardView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_marginBottom="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginLeft="16dp"
+			app:cardElevation="8dp"
+			android:backgroundTint="@color/button_turq"
+			app:cardCornerRadius="8dp">
+
+
+		</androidx.cardview.widget.CardView>
+
+		<androidx.cardview.widget.CardView
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			android:layout_columnWeight="1"
+			android:layout_rowWeight="1"
+			android:layout_marginBottom="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginLeft="16dp"
+			app:cardElevation="8dp"
+			android:backgroundTint="@color/button_light_rust"
+			app:cardCornerRadius="8dp">
+
+		</androidx.cardview.widget.CardView>
+	</GridLayout>
+
+</ScrollView>
