--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
 	<color name="button_turq">#52D1A2</color>
 	<color name="button_light_rust">#D1A947</color>
 
+	<color name="white">#FFFFFF</color>
+
 </resources>
