--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-    
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -7,5 +7,24 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+	<style name="menu_text">
+		<item name="android:textAlignment">center</item>
+		<item name="android:textColor">@color/white</item>
+		<item name="android:textAppearance">bold</item>
+		<item name="android:textSize">20dp</item>
+		<item name="android:layout_width">wrap_content</item>
+		<item name="android:layout_height">wrap_content</item>
+		<item name="android:layout_gravity">bottom|center</item>
+
+	</style>
+
+	<style name="menu_icons">
+		<item name="android:layout_width">145dp</item>
+		<item name="android:layout_height">145dp</item>
+		<item name="android:layout_gravity">center_horizontal</item>
+		<item name="android:padding">20dp</item>
+		<item name="android:paddingBottom">20dp</item>
+	</style>
 
 </resources>
