bug and layout fixes

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -110,6 +110,7 @@
 				android:src="@drawable/ic_notifications_active_white_24dp"/>
 
 			<TextView
+				android:paddingBottom="8dp"
 				style="@style/menu_text"
 				android:text="@string/menu_security"/>
 
@@ -134,6 +135,7 @@
 				android:src="@drawable/ic_today_white_24dp"/>
 
 			<TextView
+				android:paddingBottom="8dp"
 				style="@style/menu_text"
 				android:text="@string/menu_schedule"/>
 
