--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,10 +8,9 @@
 	tools:context=".SecurityActivity">
 
 	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/security_recycler"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:id="@+id/security_contact">
+		android:layout_height="match_parent"/>
 
-	</androidx.recyclerview.widget.RecyclerView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
