--- a/app/src/main/res/layout/activity_repair.xml
+++ b/app/src/main/res/layout/activity_repair.xml
@@ -1,34 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:id="@+id/container"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	tools:context=".RepairActivity">
-
-	<com.google.android.material.bottomnavigation.BottomNavigationView
-		android:id="@+id/nav_repair"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="0dp"
-		android:layout_marginEnd="0dp"
-		android:background="?android:attr/windowBackground"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:menu="@menu/repair_nav_menu"/>
-
-	<fragment android:id="@+id/nav_repair_fragment"
-			  android:name="androidx.navigation.fragment.NavHostFragment"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  app:defaultNavHost="true"
-			  app:layout_constraintBottom_toTopOf="@id/nav_repair"
-			  app:layout_constraintLeft_toLeftOf="parent"
-			  app:layout_constraintLeft_toRightOf="parent"
-			  app:layout_constraintTop_toTopOf="parent"
-			  app:navGraph="@navigation/repair_navigation"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".repairs.ui.main.RepairActivity">
+    
+    <com.google.android.material.appbar.AppBarLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:theme="@style/AppTheme.AppBarOverlay">
+    
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                >
+    
+            <ImageView
+                    android:layout_width="?actionBarSize"
+                    android:layout_height="?actionBarSize"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_arrow_left"
+                    android:id="@+id/backButton"
+                    android:clickable="true"/>
+    
+            <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:minHeight="?actionBarSize"
+                    android:padding="@dimen/appbar_padding"
+                    android:text="Maintenance"
+                    android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+                    android:textColor="@android:color/white"/>
+                
+        </LinearLayout>
+        
+        
+        
+        <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="?attr/colorPrimary"/>
+    </com.google.android.material.appbar.AppBarLayout>
+    
+    <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            app:srcCompat="@drawable/ic_plus"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
