--- a/app/src/main/res/layout/activity_repair.xml
+++ b/app/src/main/res/layout/activity_repair.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".repairs.ui.main.RepairActivity">
+        tools:context=".RepairActivity">
     
     <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
