--- a/app/src/main/res/layout/fragment_repair.xml
+++ b/app/src/main/res/layout/fragment_repair.xml
@@ -5,7 +5,7 @@
                                                    android:id="@+id/constraintLayout"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".repairs.ui.main.RepairFragment"
+                                                   tools:context=".ui.repairs.RepairFragment"
                                                    android:background="#e5e5e5">
     
     <TextView
